--- a/projectDirectory/TowerDefence.csproj
+++ b/projectDirectory/TowerDefence.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Characters\Enemy.cs" />
     <Compile Include="Characters\EnemyNear.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scens\Barrier.cs" />
     <Compile Include="Scens\TestScene.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
