--- a/projectDirectory/TowerDefence.csproj
+++ b/projectDirectory/TowerDefence.csproj
@@ -60,6 +60,8 @@
     <Compile Include="Characters\Character.cs" />
     <Compile Include="Characters\Enemy.cs" />
     <Compile Include="Characters\EnemyNear.cs" />
+    <Compile Include="Characters\Fireball.cs" />
+    <Compile Include="Characters\HealthNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scens\Barrier.cs" />
     <Compile Include="Scens\TestScene.cs" />
