--- a/projectDirectory/TowerDefence.csproj
+++ b/projectDirectory/TowerDefence.csproj
@@ -57,17 +57,17 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Scens\BattleGround.cs" />
     <Compile Include="Scens\Character.cs" />
     <Compile Include="Scens\DamageNode.cs" />
     <Compile Include="Scens\Defender.cs" />
     <Compile Include="Scens\Enemy.cs" />
     <Compile Include="Scens\EnemyNear.cs" />
-    <Compile Include="Scens\EnemySpawner.cs" />
     <Compile Include="Scens\Fireball.cs" />
     <Compile Include="Scens\HealthNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scens\Barrier.cs" />
-    <Compile Include="Scens\TestScene.cs" />
+    <Compile Include="Scens\ObjectCreator.cs" />
     <Compile Include="Scens\CharacterAnimationNames.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
