--- a/projectDirectory/TowerDefence.csproj
+++ b/projectDirectory/TowerDefence.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Scens\Fireball.cs" />
     <Compile Include="Scens\HealthNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Scens\Barrier.cs" />
+    <Compile Include="Scens\Crystal.cs" />
     <Compile Include="Scens\ObjectCreator.cs" />
     <Compile Include="Scens\CharacterAnimationNames.cs" />
   </ItemGroup>
