--- a/projectDirectory/TowerDefence.csproj
+++ b/projectDirectory/TowerDefence.csproj
@@ -59,16 +59,15 @@
   <ItemGroup>
     <Compile Include="Scens\BattleGround.cs" />
     <Compile Include="Scens\Charecters\Character.cs" />
+    <Compile Include="Scens\Shells\Shell.cs" />
     <Compile Include="Scens\Сharacteristics\DamageNode.cs" />
     <Compile Include="Scens\Charecters\Defender.cs" />
     <Compile Include="Scens\Charecters\Enemy.cs" />
     <Compile Include="Scens\Charecters\EnemyNear.cs" />
-    <Compile Include="Scens\Shells\Fireball.cs" />
     <Compile Include="Scens\Сharacteristics\HealthNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Scens\Crystal.cs" />
     <Compile Include="Scens\Static\ObjectCreator.cs" />
-    <Compile Include="Scens\Static\CharacterAnimationNames.cs" />
+    <Compile Include="Scens\Static\AnimationNames.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
