--- a/projectDirectory/TowerDefence.csproj
+++ b/projectDirectory/TowerDefence.csproj
@@ -68,6 +68,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scens\Static\ObjectCreator.cs" />
     <Compile Include="Scens\Static\AnimationNames.cs" />
+    <Compile Include="Scens\Charecters\SM\AttackState.cs"/>
+    <Compile Include="Scens\Charecters\SM\DeathState.cs"/>
+    <Compile Include="Scens\Charecters\SM\MoveState.cs"/>
+    <Compile Include="Scens\Charecters\SM\IdleState.cs"/>
+    <Compile Include="Scens\Charecters\SM\State.cs"/>
+    <Compile Include="Scens\Charecters\SM\StateMachine.cs"/>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
