--- a/projectDirectory/TowerDefence.csproj
+++ b/projectDirectory/TowerDefence.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scens\Static\ObjectCreator.cs" />
     <Compile Include="Scens\Static\AnimationNames.cs" />
+    <Compile Include="Scens\Static\SelectedDefenders.cs" />
     <Compile Include="Scens\Charecters\SM\AttackState.cs" />
     <Compile Include="Scens\Charecters\SM\DeathState.cs" />
     <Compile Include="Scens\Charecters\SM\MoveState.cs" />
