Add PlayerDefender node for controlled attack.

--- a/projectDirectory/TowerDefence.csproj
+++ b/projectDirectory/TowerDefence.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Scens\BattleGround.cs" />
     <Compile Include="Scens\Charecters\Character.cs" />
+    <Compile Include="Scens\Charecters\PlayerDefender.cs" />
     <Compile Include="Scens\EnemyContainer.cs" />
     <Compile Include="Scens\Shells\Shell.cs" />
     <Compile Include="Scens\WaveSpawner.cs" />
