Add border for shells.

--- a/projectDirectory/TowerDefence.csproj
+++ b/projectDirectory/TowerDefence.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Scens\Charecters\Character.cs" />
     <Compile Include="Scens\Charecters\PlayerDefender.cs" />
     <Compile Include="Scens\EnemyContainer.cs" />
+    <Compile Include="Scens\ShellsBorder.cs" />
     <Compile Include="Scens\Shells\Shell.cs" />
     <Compile Include="Scens\WaveSpawner.cs" />
     <Compile Include="Scens\Сharacteristics\DamageNode.cs" />
