--- a/projectDirectory/TowerDefence.csproj
+++ b/projectDirectory/TowerDefence.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Scens\ShellsBorder.cs" />
     <Compile Include="Scens\Shells\Shell.cs" />
     <Compile Include="Scens\Ui\Hud.cs" />
+    <Compile Include="Scens\Ui\PauseMenu.cs" />
     <Compile Include="Scens\WaveSpawner.cs" />
     <Compile Include="Scens\Сharacteristics\DamageNode.cs" />
     <Compile Include="Scens\Charecters\Defender.cs" />
