--- a/projectDirectory/TowerDefence.csproj
+++ b/projectDirectory/TowerDefence.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Scens\EnemyContainer.cs" />
     <Compile Include="Scens\ShellsBorder.cs" />
     <Compile Include="Scens\Shells\Shell.cs" />
+    <Compile Include="Scens\Static\Global.cs" />
     <Compile Include="Scens\Ui\Hud.cs" />
     <Compile Include="Scens\Ui\PauseMenu.cs" />
     <Compile Include="Scens\WaveSpawner.cs" />
@@ -75,7 +76,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scens\Static\ObjectCreator.cs" />
     <Compile Include="Scens\Static\AnimationNames.cs" />
-    <Compile Include="Scens\Static\SelectedDefenders.cs" />
     <Compile Include="Scens\Charecters\SM\AttackState.cs" />
     <Compile Include="Scens\Charecters\SM\DeathState.cs" />
     <Compile Include="Scens\Charecters\SM\MoveState.cs" />
