--- a/projectDirectory/TowerDefence.csproj
+++ b/projectDirectory/TowerDefence.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Scens\ShellsBorder.cs" />
     <Compile Include="Scens\Shells\Shell.cs" />
     <Compile Include="Scens\Static\Global.cs" />
+    <Compile Include="Scens\Static\SceneChanger.cs" />
     <Compile Include="Scens\Ui\Hud.cs" />
     <Compile Include="Scens\Ui\PauseMenu.cs" />
     <Compile Include="Scens\WaveSpawner.cs" />
@@ -94,7 +95,12 @@
     <Compile Include="Scens\MainMenu\SM\State.cs" />
     <Compile Include="Scens\MainMenu\SM\StateMachine.cs" />
     <Compile Include="Scens\MainMenu\SM\StoreState.cs" />
-
+    <Compile Include="Scens\Static\SceneSM\State.cs" />
+    <Compile Include="Scens\Static\SceneSM\StateMachine.cs" />
+    <Compile Include="Scens\Static\SceneSM\GameState.cs" />
+    <Compile Include="Scens\Static\SceneSM\MenuState.cs" />
+    <Compile Include="Scens\Static\SceneSM\StartState.cs" />
+    <Compile Include="Scens\Static\SceneSM\ExitState.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
