--- a/projectDirectory/TowerDefence.csproj
+++ b/projectDirectory/TowerDefence.csproj
@@ -57,25 +57,25 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Scens\BattleGround.cs" />
+    <Compile Include="Scens\BattleGround\BattleGround.cs" />
     <Compile Include="Scens\Characters\Character.cs" />
-    <Compile Include="Scens\Characters\PlayerDefender.cs" />
-    <Compile Include="Scens\DefenderSpawnPoint.cs" />
-    <Compile Include="Scens\EnemyContainer.cs" />
-    <Compile Include="Scens\MainMenu\DefenderCell.cs" />
+    <Compile Include="Scens\Player\PlayerDefender.cs" />
+    <Compile Include="Scens\BattleGround\DefenderSpawnPoint.cs" />
+    <Compile Include="Scens\BattleGround\EnemyContainer.cs" />
+    <Compile Include="Scens\MainMenu\Store\DefenderCell.cs" />
     <Compile Include="Scens\MainMenu\Menu.cs" />
-    <Compile Include="Scens\MainMenu\Strore.cs" />
-    <Compile Include="Scens\ShellsBorder.cs" />
+    <Compile Include="Scens\MainMenu\Store\Strore.cs" />
+    <Compile Include="Scens\BattleGround\ShellsBorder.cs" />
     <Compile Include="Scens\Shells\Shell.cs" />
     <Compile Include="Scens\Static\Global.cs" />
-    <Compile Include="Scens\Static\SceneChanger.cs" />
+    <Compile Include="Scens\Static\SceneChanger\SceneChanger.cs" />
     <Compile Include="Scens\Ui\Hud.cs" />
     <Compile Include="Scens\Ui\PauseMenu.cs" />
-    <Compile Include="Scens\WaveSpawner.cs" />
+    <Compile Include="Scens\BattleGround\WaveSpawner.cs" />
     <Compile Include="Scens\Characteristics\DamageNode.cs" />
-    <Compile Include="Scens\Characters\Defender.cs" />
-    <Compile Include="Scens\Characters\Enemy.cs" />
-    <Compile Include="Scens\Characters\EnemyNear.cs" />
+    <Compile Include="Scens\Characters\Defenders\Defender.cs" />
+    <Compile Include="Scens\Characters\Enemies\Enemy.cs" />
+    <Compile Include="Scens\Characters\Enemies\EnemyNear.cs" />
     <Compile Include="Scens\Characteristics\HealthNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scens\Static\ObjectCreator.cs" />
@@ -87,20 +87,20 @@
     <Compile Include="Scens\Characters\SM\State.cs" />
     <Compile Include="Scens\Characters\SM\StateMachine.cs" />
     <Compile Include="Scens\Characteristics\MoneyNode.cs" />
-    <Compile Include="Scens\GameSM\State.cs" />
-    <Compile Include="Scens\GameSM\StateMachine.cs" />
-    <Compile Include="Scens\GameSM\PauseState.cs" />
-    <Compile Include="Scens\GameSM\PlayerAttackState.cs" />
+    <Compile Include="Scens\BattleGround\SM\State.cs" />
+    <Compile Include="Scens\BattleGround\SM\StateMachine.cs" />
+    <Compile Include="Scens\BattleGround\SM\PauseState.cs" />
+    <Compile Include="Scens\BattleGround\SM\PlayerAttackState.cs" />
     <Compile Include="Scens\MainMenu\SM\MenuState.cs" />
     <Compile Include="Scens\MainMenu\SM\State.cs" />
     <Compile Include="Scens\MainMenu\SM\StateMachine.cs" />
     <Compile Include="Scens\MainMenu\SM\StoreState.cs" />
-    <Compile Include="Scens\Static\SceneSM\State.cs" />
-    <Compile Include="Scens\Static\SceneSM\StateMachine.cs" />
-    <Compile Include="Scens\Static\SceneSM\GameState.cs" />
-    <Compile Include="Scens\Static\SceneSM\MenuState.cs" />
-    <Compile Include="Scens\Static\SceneSM\StartState.cs" />
-    <Compile Include="Scens\Static\SceneSM\ExitState.cs" />
+    <Compile Include="Scens\Static\SceneChanger\SM\State.cs" />
+    <Compile Include="Scens\Static\SceneChanger\SM\StateMachine.cs" />
+    <Compile Include="Scens\Static\SceneChanger\SM\GameState.cs" />
+    <Compile Include="Scens\Static\SceneChanger\SM\MenuState.cs" />
+    <Compile Include="Scens\Static\SceneChanger\SM\StartState.cs" />
+    <Compile Include="Scens\Static\SceneChanger\SM\ExitState.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
