--- a/projectDirectory/TowerDefence.csproj
+++ b/projectDirectory/TowerDefence.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Scens\BattleGround\BattleGround.cs" />
     <Compile Include="Scens\Characters\Character.cs" />
+    <Compile Include="Scens\Characters\Crystal.cs" />
     <Compile Include="Scens\Player\PlayerDefender.cs" />
     <Compile Include="Scens\BattleGround\DefenderSpawnPoint.cs" />
     <Compile Include="Scens\BattleGround\EnemyContainer.cs" />
