Add explosion animation node for range attack shell.

--- a/projectDirectory/TowerDefence.csproj
+++ b/projectDirectory/TowerDefence.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Scens\MainMenu\Store\Strore.cs" />
     <Compile Include="Scens\BattleGround\ShellsBorder.cs" />
     <Compile Include="Scens\Shells\DamageView.cs" />
+    <Compile Include="Scens\Shells\Range\Explosion.cs" />
     <Compile Include="Scens\Shells\Range\RangeShell.cs" />
     <Compile Include="Scens\Shells\Shell.cs" />
     <Compile Include="Scens\Static\DefendersData.cs" />
