Add death screen.

--- a/projectDirectory/TowerDefence.csproj
+++ b/projectDirectory/TowerDefence.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Scens\BattleGround\BattleGround.cs" />
     <Compile Include="Scens\BattleGround\BattleGroundMusicPlayer.cs" />
+    <Compile Include="Scens\BattleGround\DeathScreen.cs" />
     <Compile Include="Scens\BattleGround\Firework.cs" />
     <Compile Include="Scens\BattleGround\Fireworks.cs" />
     <Compile Include="Scens\Characteristics\Money.cs" />
