--- a/projectDirectory/TowerDefence.csproj
+++ b/projectDirectory/TowerDefence.csproj
@@ -65,6 +65,8 @@
     <Compile Include="Scens\Characteristics\Money.cs" />
     <Compile Include="Scens\Characters\Character.cs" />
     <Compile Include="Scens\Characters\Crystal.cs" />
+    <Compile Include="Scens\Effects\Effect.cs" />
+    <Compile Include="Scens\Effects\WindEffect.cs" />
     <Compile Include="Scens\Player\PlayerDefender.cs" />
     <Compile Include="Scens\BattleGround\DefenderSpawnPoint.cs" />
     <Compile Include="Scens\BattleGround\EnemyContainer.cs" />
